# aetherguild4

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
aether/: asgi.py  celery.py  common_settings.py  settings.py-dist  urls.py  wsgi.py
aether/api/: __init__.py  apps.py  serializers.py  urls.py  viewsets.py
aether/forum/: __init__.py  admin.py  apps.py  bbcode_tags.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
aether/forum/management/commands/: clean_urlimgs.py  find_urls.py  regenerate_bbcode.py  trigger_postprocess.py
aether/forum/migrations/: 0001_initial.py  0002_auto_20180803_2057.py  0002_forumuser_last_all_read.py  0003_auto_20180804_1836.py  0003_bbcodeimage.py  0004_auto_20180804_1858.py  0004_auto_20180807_2250.py  0004_auto_20180808_0216.py  0005_auto_20180805_0127.py  0005_merge_20180811_2007.py  0006_auto_20180805_0158.py  0006_forumpost_attached_gallery.py  0007_auto_20180805_0248.py  0007_auto_20210616_2216.py  0008_alter_forumpost_attached_gallery.py
aether/forum/templates/forum/: boards.html  edit_post.html  move_thread.html  posts.html  threads.html
aether/forum/templates/forum/fragments/: pagination.html
aether/forum/templatetags/: forum.py
aether/gallery/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
aether/gallery/migrations/: 0001_initial.py  0002_auto_20210616_2216.py
aether/gallery/templates/gallery/: galleries.html
aether/main_site/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
aether/main_site/management/commands/: backup.py
aether/main_site/migrations/: 0001_initial.py  0002_auto_20180805_0248.py  0002_auto_20180808_0216.py  0003_alter_newsitem_id.py
aether/main_site/templates/: base.html
aether/main_site/templates/main_site/: change_password.html  change_password_done.html  faq.html  index.html  logged_out.html  login.html  password_reset_email.html  profile.html  register.html  registered.html  reset_password.html  reset_password_complete.html  reset_password_confirm.html  reset_password_done.html
aether/olddata/: __init__.py  apps.py  models.py
aether/olddata/management/commands/: migrate_news.py  migrate_old.py
aether/olddata/migrations/: 0001_initial.py  0002_bbcodethumbs.py
aether/static/: custom.css  custom.js
aether/static/bootstrap4/: bootstrap.min.css
aether/static/sceditor/themes/: custom.min.css
aether/static/sceditor/themes/content/: custom.min.css
aether/utils/: bbcode.py  hashers.py  middleware.py  misc.py  permissions.py
