[tool.poetry]
name = "aetherguild.net"
version = "1.0.0"
description = "Aether website"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.0"
django-imagekit = "^5.0.0"
django-redis = "^5.2.0"
django-crispy-forms = "^2.3"
django-silk = "^5.0.4"
django-timezone-field = "^7.1"
django-csp = "^3.8"
djangorestframework = "^3.15.0"
Pillow = "^9.5.0"
argon2-cffi = "^23.1.0"
django-precise-bbcode = "^1.2.16"
celery = "^5.4.0"
requests = "^2.32.3"
uvicorn = "^0.34.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
crispy-bootstrap4 = "^2024.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 109
target-version = ['py311']
